fixe work__gallery

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="works-container u-margin-top-medium">
                     <div class="works css-works">
-                        <div class="work fade-1">
+                        <div class="work">
                             <div class="work-container">
                                 <img src="img/css-1-1.png" alt="bg-1" class="work__bg">
                                 <div class="work__info">
@@ -284,7 +284,7 @@
                                 <button onclick="nextImage()" class="btn-gallery btn-gallery-next">Next</button>
                             </div>
                         </div>
-                        <div class="work fade-1">
+                        <div class="work">
                             <div class="work-container">
                                 <img src="img/css-2-1.png" alt="bg-1" class="work__bg">
                                 <div class="work__info">
@@ -305,7 +305,7 @@
                                 <button onclick="nextImage()" class="btn-gallery btn-gallery-next">Next</button>
                             </div>
                         </div>
-                        <div class="work fade-1">
+                        <div class="work">
                             <div class="work-container">
                                 <img src="img/css-3-1.png" alt="bg-1" class="work__bg">
                                 <div class="work__info">
